# open-valhalla-vst3

./: .gitignore  AGENTS.md  CMakeLists.txt  COMPARISON.md  README.md  RUN_BUILD.bat  build_release_linux.sh  build_release_mac.sh  build_release_windows.bat
.github/scripts/: bump_version.py
.github/workflows/: cmake_build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReverbProcessor.cpp  ReverbProcessor.h
Tests/: ScreenshotTest.cpp
docs/: README.md
